#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(FULL-PACKAGE-NAME, VERSION, BUG-REPORT-ADDRESS)
AC_LANG([C])
AC_CONFIG_SRCDIR([cloudfuse.c])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MKDIR_P

# Checks for libraries.
AC_CHECK_LIB([curl], [curl_easy_init], , AC_MSG_ERROR([unable to link libcurl]))
AC_CHECK_LIB([fuse], [fuse_main], , AC_MSG_ERROR([unable to link libfuse]))
AC_CHECK_LIB([xml2], [xmlCreatePushParserCtxt], , AC_MSG_ERROR([unable to link libxml2]))
PKG_CHECK_MODULES([REQLIBS], [libxml-2.0 >= 2.0 libcurl >= 2.0 fuse >= 2.0])

# Checks for header files.
AC_FUNC_ALLOCA
AC_HEADER_STDC
AC_CHECK_HEADER([curl/curl.h], , AC_MSG_ERROR([unable to find libcurl headers]))
AC_CHECK_HEADER([fuse.h], , AC_MSG_ERROR([unable to find libfuse headers]),
[
#ifndef _FILE_OFFSET_BITS
#define _FILE_OFFSET_BITS 64
#endif
])
AC_CHECK_HEADERS([fcntl.h stdint.h stdlib.h string.h strings.h sys/time.h unistd.h pthread.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_UID_T
AC_TYPE_MODE_T
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_STRUCT_TM

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_MKTIME
AC_FUNC_SELECT_ARGTYPES
AC_TYPE_SIGNAL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([ftruncate memmove strcasecmp strchr strdup strncasecmp strrchr strstr])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
