#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(FULL-PACKAGE-NAME, VERSION, BUG-REPORT-ADDRESS)
AC_LANG([C])
AC_CONFIG_SRCDIR([cloudfuse.c])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MKDIR_P

# Checks for libraries.
PKG_CHECK_MODULES(XML, libxml-2.0 >= 2.0, , AC_MSG_ERROR('Unable to find libxml2. Please make sure library and header files are installed.'))
PKG_CHECK_MODULES(CURL, libcurl >= 2.0, , AC_MSG_ERROR('Unable to find libcurl.  Please make sure library and header files are installed.'))
PKG_CHECK_MODULES(FUSE, fuse >= 2.0, , AC_MSG_ERROR('Unable to find libfuse.  Please make sure library and header files are installed.'))

# Checks for header files.
AC_FUNC_ALLOCA
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h stdint.h stdlib.h string.h strings.h sys/time.h unistd.h pthread.h fuse.h curl/curl.h libxml/tree.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_UID_T
AC_TYPE_MODE_T
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_STRUCT_TM

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_MKTIME
AC_TYPE_SIGNAL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([ftruncate memmove strcasecmp strchr strdup strncasecmp strrchr strstr])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
